--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Toronto Police Servcies Board: Meeting Information</title>
+    <title>Toronto Police Services Board: Meeting Information</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
